// Nexus_Commerce — Commerce Service

Table carts {
  id uuid [pk]
  user_id uuid
  guest_token varchar(64)
  status varchar(20) [not null, default: 'ACTIVE']
  currency char(3) [not null, default: 'VND']
  subtotal decimal(14,2) [not null, default: 0]
  tax_amount decimal(14,2) [not null, default: 0]
  discount_amount decimal(14,2) [not null, default: 0]
  shipping_estimate decimal(14,2) [not null, default: 0]
  expires_at datetime [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table cart_items {
  id uuid [pk]
  cart_id uuid [not null]
  product_id uuid [not null]
  sku_code varchar(100) [not null]
  product_name varchar(300) [not null]
  unit_price decimal(14,2) [not null]
  quantity int [not null]
  line_total decimal(14,2) [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  indexes { (cart_id, product_id) [unique] }
}

Table checkout_sessions {
  id uuid [pk]
  cart_id uuid [not null]
  user_id uuid [not null]
  status varchar(20) [not null, default: 'STARTED']
  shipping_address text [not null]
  payment_method varchar(30) [not null, default: 'STRIPE']
  price_snapshot text [not null]
  reservation_refs text
  expires_at datetime [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table orders {
  id uuid [pk]
  order_number varchar(30) [unique, not null]
  buyer_id uuid [not null]
  seller_id uuid
  source varchar(20) [not null, default: 'CART_CHECKOUT']
  source_ref_id uuid
  status varchar(30) [not null, default: 'PENDING_PAYMENT']
  currency char(3) [not null, default: 'VND']
  subtotal decimal(14,2) [not null]
  tax_amount decimal(14,2) [not null, default: 0]
  discount_amount decimal(14,2) [not null, default: 0]
  shipping_fee decimal(14,2) [not null, default: 0]
  total_amount decimal(14,2) [not null]
  shipping_address text [not null]
  payment_deadline datetime
  idempotency_key varchar(64) [unique]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table order_items {
  id uuid [pk]
  order_id uuid [not null]
  product_id uuid [not null]
  sku_code varchar(100) [not null]
  product_name varchar(300) [not null]
  unit_price decimal(14,2) [not null]
  quantity int [not null]
  line_total decimal(14,2) [not null]
}

Table order_status_history {
  id uuid [pk]
  order_id uuid [not null]
  from_status varchar(30)
  to_status varchar(30) [not null]
  reason text
  changed_by uuid
  changed_at datetime [not null]
}

Table payments {
  id uuid [pk]
  order_id uuid [not null]
  provider varchar(30) [not null, default: 'STRIPE']
  provider_payment_id varchar(100)
  amount decimal(14,2) [not null]
  currency char(3) [not null, default: 'VND']
  status varchar(20) [not null, default: 'INITIATED']
  idempotency_key varchar(64) [unique, not null]
  metadata text
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table payment_attempts {
  id uuid [pk]
  payment_id uuid [not null]
  attempt_no smallint [not null]
  status varchar(20) [not null]
  error_code varchar(50)
  error_message text
  attempted_at datetime [not null]
}

Table refunds {
  id uuid [pk]
  order_id uuid [not null]
  payment_id uuid [not null]
  amount decimal(14,2) [not null]
  reason text
  status varchar(20) [not null, default: 'REQUESTED']
  provider_refund_id varchar(100)
  requested_by uuid [not null]
  idempotency_key varchar(64) [unique]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table outbox_events {
  id uuid [pk]
  aggregate_type varchar(50) [not null]
  aggregate_id uuid [not null]
  event_type varchar(100) [not null]
  payload text [not null]
  published_at datetime
  created_at datetime [not null]
}

Ref: cart_items.cart_id > carts.id
Ref: checkout_sessions.cart_id > carts.id
Ref: order_items.order_id > orders.id
Ref: order_status_history.order_id > orders.id
Ref: payments.order_id > orders.id
Ref: payment_attempts.payment_id > payments.id
Ref: refunds.order_id > orders.id
Ref: refunds.payment_id > payments.id
